--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,4 @@
+/*****************  Menu Liste   *******/
 body {
     margin: 0vw;
     padding: 0vw;
@@ -50,4 +51,14 @@ img {
    background-color: whitesmoke;
    color: darkblue;
    margin: 5vw;
+}
+/*************  Connexion ****************/
+.body-co{
+    padding:0;
+    margin:0;
+    background:linear-gradient(#ffffff, #5d7484);
+    background-repeat: no-repeat;
+    display:flex; 
+     flex-direction: column;
+    justify-content: center;
 }
