--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -53,7 +53,7 @@ img {
    margin: 5vw;
 }
 /*************  Connexion ****************/
-.body-co{
+body.body-co{
     padding:0;
     margin:0;
     background:linear-gradient(#ffffff, #5d7484);
