--- a/CSS/map1.css
+++ b/CSS/map1.css
@@ -38,10 +38,8 @@ img{
     position: absolute;
     top: 10vh;
     left: 10vw;
-    width: 4vw;
+    width: 3vw;
     height: 6vh;
-    /* background-image: url("images/skinHumain.png"); */
-    background-size: contain;
     border-radius: 20px;
     margin: 0;
     padding: 0;
@@ -49,7 +47,13 @@ img{
     display: flex;
     flex-direction: column;
 }
-
+.persoChercheurDor{
+    background-image: url(../Images/decor/skinChercheurDor.png);
+    background-size: contain;
+    background-position:  center;
+    border-radius: 20px;
+    box-shadow: black 2px 2px 2px;
+}
 /*terrain*/
 .terrainMap1{
     width: 100vw;
@@ -171,12 +175,12 @@ img{
     top: 78vh;
     left: 0vw;
     width: 5vw;
-    height: 7.5vh;
+    height: 9vh;
 }
 .line19{
     top: 70vh;
-    left: 94vw;
-    width: 5vw;
+    left: 95vw;
+    width: 4vw;
     height: 7.5vh;
 }
 /*deco**********************************************************************/
@@ -332,3 +336,4 @@ img{
     height: 6vh;
     width: 3vw;
 }
+/*pieces*/
