--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,8 +1,15 @@
+:root {
+    --color-grey: #ABC8C0;
+    --color-blue: #70A9A1;
+    --color-turquoise: #17C3B2;
+}
+
 /*****************  Menu Liste   *******/
 body {
     margin: 0vw;
     padding: 0vw;
-    background-color: rgb(46, 46, 82);
+    background-color:var(--color-grey);
+    font-family: 'Berkshire Swash',cursive;
 }
 
 .menu {
@@ -44,21 +51,161 @@ img {
 }
 
 .btn {
-   text-decoration: none; 
-   border: 3px solid wheat; 
-   border-radius: 20px;
-   padding: 1vw;
-   background-color: whitesmoke;
-   color: darkblue;
-   margin: 5vw;
+    text-decoration: none;
+    border: 3px solid wheat;
+    border-radius: 20px;
+    padding: 1vw;
+    background-color: whitesmoke;
+    color: darkblue;
+    margin: 5vw;
 }
+
 /*************  Connexion ****************/
-body.body-co{
-    padding:0;
-    margin:0;
-    background:linear-gradient(#ffffff, #5d7484);
-    background-repeat: no-repeat;
-    display:flex; 
-     flex-direction: column;
+/* body.body.co {
+    padding: 0;
+    margin: 0;
+    background-color:skyblue;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+} */
+
+.header-co {
+    display: flex;
+    height: 20vh;
+    background: linear-gradient(#E0F2E9, #17C3B2);
+    text-align: center;
+    color: black;
+    text-shadow: 1px 1px white;
+
+}
+
+.logo {
+    flex: 0.5;
+    align-self: center;
+
+}
+
+#title {
+    flex: 2;
+    font-size: 5em;
+}
+
+.esp {
+    flex: 0.5;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10vh 0 15vh 0;
+
+}
+
+.connect-form {
+    background-color: ivory;
+    width: 40vw;
+    margin: 10vh 30vw;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.514);
+    align-items: center;
+    text-align: center;
+}
+
+.head-connexion {
+    height: 7vh;
+    font-size: 2em;
+    color: ivory;
+    background-color: var(--color-blue);
+    border-radius: 10px 10px 0px 0px;
+    /* border-bottom: 4px solid var(--color-red); */
+    margin-bottom: 2vh;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contenu {
+    width: 22vw;
+    position: relative;
+
+}
+
+.input-co {
+    width: 80%;
+    height: 3.2vh;
+    position: relative;
+    margin-bottom: 2vh;
+    text-indent: 4vw;
+}
+
+.fa-eye {
+    right: 23px;
+    top: 0px;
+
+}
+
+
+.fa-user-circle-o {
+    /* left: 2px; */
+    top: 0px;
+    border-right: solid 2px var(--color-blue);
+}
+
+i {
+    position: absolute;
+    color: var(--color-blue);
+    font-size: 1em;
+    padding: 0.4vw 1vw;
+    z-index: 10;
+    cursor: pointer;
+}
+
+.fa-unlock-alt {
+    /* left: 2px; */
+    top: 0px;
+    border-right: solid 2px var(--color-blue);
+    padding: 0.4vw 1.08vw;
+}
+.bouton {
+padding:1.5vh;
+margin: 1vh 1vw 1.5vh 1vw;
+border-radius: 12px;
+border: 1px solid #17C3B2;
+font-family: 'Berkshire swash',sans-serif;
+cursor: pointer;
+
+}
+
+.bouton:hover{
+    background-color: #17C3B2;
+    color:white;
+    transform: scale(1.2);
+    transition: 0.5s;
+}
+.lien-a{
+    text-decoration: none;
+    color:var(--color-blue);
+    
+}
+.lien-a:hover{
+    color: #17C3B2;
+    transform: scale(0.9);
+}
+
+footer {
+    width: 100%;
+    bottom: 0;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    color: black;
+    height: 13vh;
+    background: linear-gradient(#17C3B2,#E0F2E9);
+    align-items: center;
+    text-align: center;
 }
