--- a/CSS/map1.css
+++ b/CSS/map1.css
@@ -32,20 +32,103 @@ img{
     top: 89vh; 
     background-image: url("../Images/decor/menu.png");
     background-size: cover;
+    display: flex;
+}
+.nomPerso{
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid black;
+}
+.vie{
+    flex: 1;
+    display: flex;
+    align-items: center;
+    border: 2px solid black;
+}
+.viePerso{
+    flex: 1;
+    height: 5vh;
+}
+.menuOr{
+    flex: 1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border: 2px solid black;
+}
+.keyMenu{
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid black;
+}
+.keyDansMenu{
+    height: 4vh;
+    width: 3vw;
+}
+.time{
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid black;
 }
 /********************************************************************* Joueur */
 #playerMap1 {
     position: absolute;
     top: 10vh;
     left: 10vw;
-    width: 3vw;
-    height: 6vh;
+    width: 4vw;
+    height: 7vh;
     border-radius: 20px;
     margin: 0;
     padding: 0;
     box-shadow: black 2px 2px 2px;
     display: flex;
     flex-direction: column;
+}
+.hautPerso{
+    flex: 1;
+    display: flex;
+    justify-content: space-around;
+}
+.basPerso{
+    flex: 1;
+}
+.orbite{
+    position: relative;
+    top: 0.5vw;
+    width: 1.5vw;
+    height: 1.5vw;
+    background-color: rgba(196, 166, 158, 0.5);
+    border-radius: 15px;
+    box-shadow: black 2px 2px 2px;
+    display: flex;
+    justify-content: center;
+}
+.oeil{
+    flex: 1;
+    border-radius: 50px;
+    width: 1vw;
+    height: 1vw;
+    position: relative;
+    top: 0.25vw;
+    background-color: rgb(219, 219, 219);
+    box-shadow: black 2px 2px 2px;
+    display: flex;
+    justify-content: center;
+}
+.pupille{
+    background-color: rgb(0, 0, 0);
+    border-radius: 50px;
+    position: relative;
+    width: 0.5vw;
+    height: 0.5vw;
+    top: 0.25vw;
+    box-shadow: black 2px 2px 2px;
 }
 .persoChercheurDor{
     background-image: url(../Images/decor/skinChercheurDor.png);
@@ -166,13 +249,13 @@ img{
     height: 25vh;
 }
 .line17{
-    top: 6vh;
+    top: 3.5vh;
     left: 26vw;
     width: 5vw;
     height: 7.5vh;
 }
 .line18{
-    top: 78vh;
+    top: 80vh;
     left: 0vw;
     width: 5vw;
     height: 9vh;
@@ -270,19 +353,19 @@ img{
     height: 4vh;
 }
 #mur14{
-    top: 5vh;
+    top: 3vh;
     left: 27vw;
     width: 4vw;
     height: 4vh;
 }
 #mur15{
-    top: 9vh;
+    top: 7vh;
     left: 27vw;
     width: 4vw;
     height: 4vh;
 }
 #mur16{
-    top: 78vh;
+    top: 80vh;
     left: 1vw;
     width: 4vw;
     height: 4vh;
@@ -303,37 +386,83 @@ img{
 .monstre1{
     top:10vh;
     left: 55vw;
-    height: 6vh;
-    width: 3vw;
+    height: 7vh;
+    width: 4vw;
 }
 .monstre2{
     top: 55vh;
     left: 10vw;
-    height: 6vh;
-    width: 3vw;
+    height: 10vh;
+    width: 5vw;
 }
 .monstre3{
     top: 75vh;
     left: 55vw;
-    height: 6vh;
-    width: 3vw;
+    height: 7vh;
+    width: 4vw;
 }
 .monstre4{
     top: 71.5vh;
     left: 17vw;
-    height: 6vh;
-    width: 3vw;
+    height: 7vh;
+    width: 4vw;
 }
 .monstre5{
     top: 33vh;
     left: 87vw;
-    height: 6vh;
-    width: 3vw;
+    height: 7vh;
+    width: 4vw;
 }
 .monstre6{
     top: 34vh;
     left: 40vw;
-    height: 6vh;
+    height: 10vh;
+    width: 5vw;
+}
+/*piece*/
+.piece{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 2px 2px 2px black;
+    border: thick double #fc940d;  
+    color: coral;
+    background-color: rgb(243, 243, 113);
+    border-radius: 50px;
+    width: 2vw;
+    height: 4vh;
+}
+.pieceMenu{
+
+}
+#piece1{
+    top: 73vh;
+    left: 45vw;
+    width: 2vw;
+    height: 4vh;
+}
+#piece2{
+    top: 7vh;
+    left: 94vw;
+    width: 2vw;
+    height: 4vh;
+}
+#piece3{
+    top: 59vh;
+    left: 56vw;
+    width: 2vw;
+    height: 4vh;
+}
+#piece4{
+    top: 32vh;
+    left: 95vw;
+    width: 2vw;
+    height: 4vh;
+}
+/*key*/
+#key1{
+    top: 72vh;
+    left: 2vw;
+    height: 4vh;
     width: 3vw;
 }
-/*pieces*/
