--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -84,6 +84,7 @@ img {
 .logo {
     flex: 0.5;
     align-self: center;
+    width:30%;  
 
 }
 
@@ -196,6 +197,9 @@ cursor: pointer;
 .lien-a:hover{
     color: #17C3B2;
     transform: scale(0.9);
+}
+.dessusFooter {
+    margin-bottom: 10vh;
 }
 
 footer {
