MAJ map1.php time ect

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -196,12 +196,9 @@ cursor: pointer;
     color: #17C3B2;
     transform: scale(0.9);
 }
-.dessusFooter {
-    margin-bottom: 10vh;
-}
 
 .dessusFooter {
-    margin-bottom: 20vh;
+    margin-bottom: 20vw;
 }
 
 footer {
