--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -240,7 +240,7 @@ body {
 }
 .marge{
     margin-left: 20vw;
-    margin-top: 5vw;
+    margin-top: 2vw;
 }
 .borderBlue{
     border: 3px inset var(--color-turquoise);
@@ -249,7 +249,7 @@ body {
     border-radius: 10px;
 }
 .margeBoutonTop{
-    margin-top: 5vh;
+    margin-top: 1vh;
 }
 /*************************************************couleur*/
 .ligne{
@@ -268,6 +268,8 @@ body {
 }
 .titreTab{
     text-shadow:4px 1px var(--color-turquoise);
+    width: 100vw;
+    display: flex;
     justify-content: center;
 }
 .ecritureBlanche{
@@ -288,7 +290,6 @@ body {
 .boutonRetour{
     width: 10vw;
     height: 4vh;
-    margin-bottom: 2vh;
     background-color:var(--color-turquoise);
     align-items: center;
     box-shadow: 2px 2px 2px black;
