--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -28,6 +28,7 @@ body {
 .menuchoix {
     height: 5vh;
     width: 20vw;
+    font-size: 1em;
     border-radius: 10px;
     border: solid 3px wheat;
     text-align: center;
@@ -53,15 +54,29 @@ body {
 
 .btn3 {
     padding: 2vw;
-    text-align: center;
+    justify-content: center;
     cursor: url(../Images/glove3.png) 4 12, pointer;
+    display:flex;
 }
 
 .btn {
     text-decoration: none;
+    border-radius: 20px;
+    font-family: 'Berkshire swash',sans-serif;
+    font-size: 1em;
+    padding: 1vw;
+    font-weight: bold;
+    margin: 5vw;
+    margin-bottom: 5vh;
+    cursor: url(../Images/glove3.png) 4 12, pointer;
+}
+
+.btn1 {
+  text-decoration: none;
     border: 3px solid wheat;
     border-radius: 20px;
     font-family: 'Berkshire swash',sans-serif;
+    font-size: 1em;
     padding: 1vw;
     font-weight: bold;
     background-color: whitesmoke;
@@ -69,6 +84,34 @@ body {
     margin: 5vw;
     margin-bottom: 5vh;
     cursor: url(../Images/glove3.png) 4 12, pointer;
+}
+
+.btn2 {
+    text-decoration: none;
+      border: 3px solid wheat;
+      border-radius: 20px;
+      font-family: 'Berkshire swash',sans-serif;
+      font-size: 1em;
+      padding: 1vw;
+      font-weight: bold;
+      background-color: whitesmoke;
+      color: darkblue;
+      margin: 5vw;
+      margin-bottom: 5vh;
+      cursor: url(../Images/glove3.png) 4 12, pointer;
+  }
+
+.btn:hover {
+    transform: scale(1.5);
+}
+
+.btn2:hover {
+    transform: scale(1.5);
+    color: #17C3B2;  
+}
+
+.btn1:hover {
+    color: #17C3B2;  
 }
 
 /*************  Connexion ****************/
