--- a/CSS/map3.css
+++ b/CSS/map3.css
@@ -315,6 +315,37 @@ img{
     width: 3.5vw;
     height: 2vh;
 }
+.line61{
+    top: 54vh;
+    left: 15vw;
+    width: 4vw;
+    height: 4vh;
+}
+.line62{
+    top: 58vh;
+    left: 15vw;
+    width: 4vw;
+    height: 4vh;
+}
+.line63{
+    top: 82vh;
+    left: 43vw;
+    width: 12.9vw;
+    height: 4vh;
+    
+}
+.line64{
+    top: 57vh;
+    left: 78vw;
+    width: 5vw;
+    height: 8vh;
+}
+.line65{
+    top: 35vh;
+    left: 55vw;
+    width: 8vw;
+    height: 5vh;
+}
 /*deco**********************************************************************/
 .marron{
     background-color: rgb(114, 70, 12);
